tests/baselines/reference/collisionExportsRequireAndFunction.errors.txt
==== tests/cases/compiler/collisionExportsRequireAndFunction.ts (2 errors) ====
    export function exports() {
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
        return 1;
    ~~~~~~~~~~~~~
    }
    ~
!!! collisionExportsRequireAndFunction.ts(1,1): error TS2228: Duplicate identifier 'exports'. Compiler reserves name 'exports' in top level scope of an external module.
    export function require() {
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
        return "require";
    ~~~~~~~~~~~~~~~~~~~~~
    }
    ~
!!! collisionExportsRequireAndFunction.ts(4,1): error TS2228: Duplicate identifier 'require'. Compiler reserves name 'require' in top level scope of an external module.
    